# libayatana-appindicator-glib

bindings/vala/: CMakeLists.txt
doc/: CMakeLists.txt
src/: CMakeLists.txt
